# ia_rag

./: .gitignore  README.md  app_st.py  chat.py  pyproject.toml  setup.py  storage_handling.py
app/: agent.py  agent_investigacion.py  functions.py
rag/: app.py  pyproject.toml
rag_gemini/: setup.py
rag_gemini/app/: agent_simple.py
